fix(admin-ui): display of sidebar menu on small screen sizes #1338

--- a/admin-ui/app/styles/miltonbo/scss/_navbar.scss
+++ b/admin-ui/app/styles/miltonbo/scss/_navbar.scss
@@ -259,11 +259,6 @@
                     .dropdown.show > .nav-link {
                         background: none;
                     }
-                    .nested-dropdown__submenu-item--open .dropdown-menu,
-                    .dropdown-menu.show {
-                        background: none;
-                        border: none;
-                    }
                 }
 
                 // Light
